fix issue of nav not displaying again after slidetoggle on smalls creen

--- a/styles/sass/_nav.scss
+++ b/styles/sass/_nav.scss
@@ -17,6 +17,7 @@ nav {
   }
   ul {
     float: right;
+    display: block;
     line-height: 5;
     @include breakpoint(sml-screen) {
       display: none;
@@ -66,8 +67,4 @@ nav {
   @include breakpoint(sml-screen) {
     padding: 0 1em;
   } 
-}
-
-.r-nav {
-
 }
